[New] Replace Transformation with ModuleExecution and PipelineExecution